added theme elements

--- a/config/nginx/nginx-simple.conf
+++ b/config/nginx/nginx-simple.conf
@@ -6,12 +6,6 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     
-    # Add blueprint theme injection
-    map $uri $blueprint_injection {
-        default "";
-        ~*\.html$ '<script src="/themes/blueprint/blueprint-inject.js"></script>';
-    }
-
     upstream openwebui {
         server openwebui:8080;
     }
@@ -29,16 +23,37 @@ http {
             alias /themes/blueprint/;
             expires 1h;
             add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
         }
 
-        # Serve blueprint themed interface
-        location /blueprint {
-            alias /themes/blueprint/blueprint-index.html;
+        # Serve custom blueprint index page
+        location = / {
+            alias /themes/blueprint/;
+            try_files blueprint-index.html =404;
             add_header Content-Type "text/html; charset=utf-8";
         }
 
-        # OpenWebUI frontend with theme injection
+        # Direct access to OpenWebUI (bypassing our wrapper)
+        location /app/ {
+            proxy_pass http://openwebui/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        # Proxy all other requests to OpenWebUI
         location / {
+            # Skip our custom index
+            if ($uri = "/") {
+                break;
+            }
+            
             proxy_pass http://openwebui;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -49,11 +64,6 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            
-            # Theme injection for HTML responses
-            sub_filter '</head>' '$blueprint_injection</head>';
-            sub_filter_once off;
-            sub_filter_types text/html;
         }
 
         # Ollama API endpoint
